# screen-translate

./: .gitignore  README.md  config.yaml  logging.yaml  main.py  pyproject.toml
screen_translator/: config.py  ocr_engine.py  overlay_display.py  screen_capture.py  screen_translator.py
screen_translator/translator/: baidu_translator.py  google_translator.py  local_translator.py  no_translator.py  translator.py
tests/: test_modules.py
